examples/datalog/09_recursion/33_counting_paths.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_paths
Knowledge graph 'test_count_paths' created.
Switched to knowledge graph: test_count_paths
> .kg use test_count_paths
Switched to knowledge graph: test_count_paths
> +edge[(1, 2), (1, 3), (2, 4), (3, 4)].
Inserted 4 fact(s) into 'edge'.
> +path(X, Y) :- edge(X, Y).
Rule 'path' registered.
> +path(X, Z) :- path(X, Y), edge(Y, Z).
Rule 'path' registered.
> ?- path(X, Y).
5 rows:
  (1, 2)
  (1, 3)
  (1, 4)
  (2, 4)
  (3, 4)
> +paths_from_1(<COUNT:Y>) :- path(1, Y).
Script error: Parse error: Invalid term: '<COUNT:Y>'
