examples/datalog/09_recursion/33_counting_paths.dl
% Test: Count paths pattern
% Expected: Count distinct paths between nodes
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_count_paths
.kg use test_count_paths

+edge[(1, 2), (1, 3), (2, 4), (3, 4)].

% All paths
+path(X, Y) :- edge(X, Y).
+path(X, Z) :- path(X, Y), edge(Y, Z).

?- path(X, Y).

% Count paths from 1
+paths_from_1(<COUNT:Y>) :- path(1, Y).

?- paths_from_1(N).

.kg use default
.kg drop test_count_paths
